--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -101,7 +101,7 @@ jobs:
         echo "$EOF" >> $GITHUB_OUTPUT
         # cat asv-output.log
     
-    - run: echo ${{ steps.asv_logs.outputs.LOGS }}
+    - run: echo ${{join(steps.asv_logs.outputs.*, '\n')}}
 
     - name: Post comment
       if: github.event_name == 'pull_request'
@@ -119,7 +119,7 @@ jobs:
           Results can also be downloaded as artifacts. 
           <details>
             <summary>ASV Logs</summary>
-            ${{ steps.asv_logs.outputs.LOGS }}
+            ${{join(steps.asv_logs.outputs.*, '\n')}}
           </details>
 
     # - uses: stefanzweifel/git-auto-commit-action@v4
