try again [bench]

--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -97,7 +97,7 @@ jobs:
       run: |
         EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
         echo "text<<$EOF" >> $GITHUB_OUTPUT
-        echo "LOGS=$(cat asv-output.log)" >> $GITHUB_OUTPUT
+        echo "$(cat asv-output.log)" >> $GITHUB_OUTPUT
         echo "$EOF" >> $GITHUB_OUTPUT
         # cat asv-output.log
     
@@ -122,7 +122,7 @@ jobs:
 
             ${{join(steps.asv_logs.outputs.*, '\n')}}
             ${{ steps.asv_logs.outputs.LOGS }}
-            
+
           </details>
 
     # - uses: stefanzweifel/git-auto-commit-action@v4
