--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -135,8 +135,25 @@ jobs:
             issue_number: context.issue.number,
             owner: context.repo.owner,
             repo: context.repo.repo,
-            body: '👋 Thanks for reporting!'
+            body: '
+            *\*beep\* \*bop\**
+          Hi human, 
+          I ran benchmarks as you asked comparing master (${{ github.event.pull_request.base.sha }}) and the latest commit (${{ github.event.pull_request.head.sha }}). 
+          Here are the logs produced by ASV.
+          Results can also be downloaded as artifacts [**here**](${{ env.URL }}). 
+          <details>
+
+            ```
+            ${{join(steps.asv_logs.outputs.*, '\n')}}
+            ${{ steps.asv_logs.outputs.LOGS }}
+            ```
+          </details>
+            
+            '
           })
+      env:
+        URL: https://github.com/${{ github.repository_owner }}/${{ github.event.repository.name }}/actions/runs/${{ github.run_id }}?check_suite_focus=true
+    
 
     # - uses: stefanzweifel/git-auto-commit-action@v4
     #   with:
