--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -143,9 +143,10 @@ jobs:
           Results can also be downloaded as artifacts [**here**](${{ env.URL }}). 
           <details>
 
-          
+              <code>
               ${{join(steps.asv_logs.outputs.*, '\n')}}
               ${{ steps.asv_logs.outputs.LOGS }}
+              </code>
             
           </details>
             
