--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -142,12 +142,12 @@ jobs:
           Here are the logs produced by ASV.
           Results can also be downloaded as artifacts [**here**](${{ env.URL }}). 
           <details>
-
+          <pre>
           <code>
           ${{join(steps.asv_logs.outputs.*, '\n')}}
           ${{ steps.asv_logs.outputs.LOGS }}
           </code>
-            
+          </pre>
           </details>
             
             `
