--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -26,7 +26,7 @@ defaults:
 jobs:
   build:
     # if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
-    if: "!contains(github.event.head_commit.message, 'bench')"
+    if: "contains(github.event.head_commit.message, 'bench')"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
