--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -26,14 +26,14 @@ defaults:
 jobs:
   build:
     # if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
-    if: "contains(github.event.head_commit.message, 'bench')"
+    if: contains(github.event.head_commit.message, 'bench')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
     
-    
+
     - run: |
         REPO_URL="https://dev.azure.com/tardis-sn/TARDIS/_apis/git/repositories/tardis-refdata"
         wget -q "$REPO_URL/items?path=atom_data/kurucz_cd23_chianti_H_He.h5&versionType=branch&version=master&resolveLfs=true" -O benchmarks/data/kurucz_cd23_chianti_H_He.h5
