--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -32,7 +32,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
+    - run: echo ${{ github.event.pull_request.head.label }}
 
     - run: |
         REPO_URL="https://dev.azure.com/tardis-sn/TARDIS/_apis/git/repositories/tardis-refdata"
