--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -27,7 +27,9 @@ jobs:
   build:
     # if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
     # if: contains(github.event.commits[0].message, 'bench') || contains(github.event.pull_request.head.label , 'bench') 
-    if: contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
+    if: github.event_name == 'push' ||
+        github.event_name == 'workflow_dispatch' || 
+        contains(github.event.pull_request.labels.*.name, 'run-benchmarks')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
