--- a/.github/workflows/run_benchmarks.yml
+++ b/.github/workflows/run_benchmarks.yml
@@ -59,7 +59,7 @@ jobs:
     - run: git branch
 
     - name: Run benchmarks for last 10 commits if not PR
-      if: github.event_name != 'pull_request'
+      # if: github.event_name != 'pull_request'
       run: |
         git log -n 10  --pretty=format:"%H" >> tag_commits.txt
         asv run HASHFILE:tag_commits.txt -e
