--- a/test_env.yml
+++ b/test_env.yml
@@ -1,4 +1,4 @@
-name: tardis-bench
+name: tardis
 
 channels:
   - conda-forge
@@ -14,4 +14,63 @@ dependencies:
   - pip
   - numpy=1.19
   - scipy=1.5
+  - pandas=1.0
+  - astropy=5.0
+  - numba=0.53
+  - numexpr
+  - radioactivedecay>=0.4.12
+
+  # Plasma
+  - networkx
+  - pygraphviz
+
+  # I/O
+  - pyyaml
+  - jsonschema
+  - hdf5=1.10
   - h5py
+  - pytables
+  - requests
+  - tqdm
+
+  # Widgets & Visualization
+  - notebook
+  - matplotlib-base
+  - ipywidgets
+  - plotly
+  - qgrid=1.3.1=pyhd8ed1ab_4 # qgrid-feedstock/issues/18
+
+  # --- Packages not required for conda-forge recipe ---
+
+  # tardis-sn/nuclear dependencies
+  - beautifulsoup4
+  - lxml
+
+  # Documentation
+  - sphinx
+  - sphinx-astropy
+  - sphinx_bootstrap_theme
+  - sphinx-jsonschema
+  - sphinx_rtd_theme
+  - sphinxcontrib-apidoc
+  - sphinxcontrib-bibtex
+  - recommonmark
+  - numpydoc
+  - nbconvert
+  - nbformat
+  - nbsphinx
+  - snakeviz
+  - dot2tex
+
+  # Test/Coverage
+  - pytest
+  - pytest-cov
+  - pytest-html
+  - python-dokuwiki
+  - coverage
+
+  # Code quality
+  - black=22.3
+
+  # Other
+  - git-lfs
